--- a/cog.yaml
+++ b/cog.yaml
@@ -19,7 +19,7 @@ build:
   run:
     - mkdir -p /opt/docling/output
     - mkdir -p /opt/docling/models
-    - HF_HUB_DOWNLOAD_TIMEOUT=300 HF_HUB_ETAG_TIMEOUT=300 docling-tools models download --all --output-dir /opt/docling/models/standard
+    - HF_HUB_DOWNLOAD_TIMEOUT=300 HF_HUB_ETAG_TIMEOUT=300 docling-tools models download --all --output-dir /opt/docling/models
 
 # predict.py defines how predictions are run on model
 predict: "predict.py:Predictor"
